# backup-helper-rs

./: Cargo.toml  README.md
.github/workflows/: test.yml
checksum_helper/: Cargo.toml
checksum_helper/doc/adr/: expos_file_tree.md  filetree_absolute_vs_relative.md  globbing_dependency.md  mtime_comparison_epsilon.md
checksum_helper/src/: alias.rs  checksum_helper.rs  collection.rs  file_tree.rs  gather.rs  hash_type.rs  hashed_file.rs  incremental.rs  lib.rs  most_current.rs  pathmatcher.rs  test_utils.rs  utils.rs
checksum_helper/src/collection/: mod.rs  parser.rs  serialize.rs  writer.rs
checksum_helper_cli/: Cargo.toml
checksum_helper_cli/src/: build.rs  incremental.rs  main.rs  modify.rs  progress.rs  verify.rs
