[package]
name = "checksum_helper"
version = "0.1.0"
edition = "2021"

[dependencies]
blake2 = "0.10.6"
filetime = "0.2.25"
hashes = "0.1.9"
hex = "0.4.3"
log = "0.4.26"
md-5 = "0.10.6"
pathdiff = "0.2.3"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"

[dev-dependencies]
testdir = "0.9.3"
pretty_assertions = "1.4"
